--- a/requirements.txt
+++ b/requirements.txt
@@ -1,34 +1,17 @@
-#this installs only work on python 3.11
-#DO NOT TRY TO INSTALL THIS ON PYTHON 3.13 OR AFTER. IT WILL NOT WORK
+#should work with newer versions of python now
 aiohttp==3.8.5
 aiosignal==1.3.1
-asttokens==2.2.1
 async-timeout==4.0.3
 attrs==23.1.0
-backcall==0.2.0
 certifi==2023.7.22
 cffi==1.15.1
 charset-normalizer==3.2.0
-click==8.1.6
-colorama==0.4.6
-decorator==5.1.1
-elevenlabs==0.2.24
-executing==1.2.0
 frozenlist==1.4.0
-gevent==23.7.0 #it doesnt work thanks to this prick
-greenlet==2.0.2
 gTTS==2.3.2
 idna==3.4
-ipython==8.14.0
-jedi==0.19.0
-matplotlib-inline==0.1.6
 multidict==6.0.4
 numpy==1.25.2
 openai==1.0.0
-parso==0.8.3
-pickleshare==0.7.5
-prompt-toolkit==3.0.39
-pure-eval==0.2.2
 PyAudio==0.2.13
 pycparser==2.21
 pydantic==1.10.12
@@ -39,16 +22,7 @@ six==1.16.0
 sounddevice==0.4.6
 soundfile==0.12.1
 SpeechRecognition==3.10.0
-stack-data==0.6.2
-tqdm==4.66.1
-traitlets==5.9.0
 typing_extensions==4.7.1
 urllib3==2.0.4
-wcwidth==0.2.6
-websocket==0.2.1
-websockets==11.0.3
 yarl==1.9.2
-zope.event==5.0
-zope.interface==6.0
 pyvts==0.3.3
-librosa==0.11.0
