renamed:    .gitignore -> Data/.gitignore 	renamed:    LICENSE -> Data/LICENSE 	renamed:    README.md -> Data/README.md 	renamed:    haarcascade_frontalface_default.xml -> Data/haarcascade_frontalface_default.xml 	new file:   Data/message_history.txt 	new file:   Data/noussoul_auth_token.txt 	renamed:    requirements.txt -> Data/requirements.txt 	modified:   Face_detectecion.py 	modified:   IA.py 	modified:   VtubeS_Plugin.py 	modified:   main.py 	deleted:    message_history.txt 	deleted:    noussoul_auth_token.txt 	modified:   settings.json

--- a/settings.json
+++ b/settings.json
@@ -1,6 +1,6 @@
 {
     "_comment": "----CHATBOT SETTINGS-----",
-    "user_input_service": "speech",
+    "user_input_service": "console",
     "chatbot_service": "openai",
 
     "_comment1": "------GENERAL SETTINGS-------",
